--- a/app/templates/app/partials/session_block.html
+++ b/app/templates/app/partials/session_block.html
@@ -10,7 +10,7 @@
                 {{ form.place }}
             </div>
             <div class="mt-1">
-                {{ form.start_time }} ～ {{ form.end_time }}
+                {{ form.start_time }} ～ {{ form.end_time }}(予定)
             </div>
         </div>
     </div>                        
