--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -49,36 +49,41 @@
 </script>
 
 <div class="wrapper">
+    <div class="d-flex justify-content-end align-items-center gap-1">
+        <form id="date-form" action="{% url 'info_dispatch' work_date=work_date %}" method="post">
+            {% csrf_token %}
+            {{ calendar_form.date }}
+            <input type="hidden" name="change_date" value="0">
+        </form>
+        <form id="date-form" action="{% url 'info_today' %}" method="get">
+            <button class="btn-sm" type="submit">
+                本日
+            </button>
+        </form>
+    </div>
+    {% if info %}
+    <ul class="nav nav-tabs mt-2" id="tab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#all-info" type="button"
+                role="tab">
+                全体情報
+            </button>
+        </li>
 
-    <form id="date-form" action="{% url 'info_dispatch' work_date=work_date %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="change_date" value="0">
-        <div class="d-flex justify-content-end">
-            <div>
-                {{ calendar_form.date }}
-            </div>
-        </div>
-        {% if info %}
-        <ul class="nav nav-tabs mt-2" id="tab" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#all-info" type="button"
-                    role="tab">
-                    全体情報
-                </button>
-            </li>
-
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="transport-tab" data-bs-toggle="tab" data-bs-target="#transport-info"
-                    type="button" role="tab">
-                    送迎情報
-                </button>
-            </li>
-        </ul>
-        {% else %}
-        <div>
-            <h2 class="mt-2">勤務データが存在しません</h2>
-            {% if request.user.is_superuser %}
-            <hr class="my-4">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="transport-tab" data-bs-toggle="tab" data-bs-target="#transport-info"
+                type="button" role="tab">
+                送迎情報
+            </button>
+        </li>
+    </ul>
+    {% else %}
+    <div>
+        <h2 class="mt-2">勤務データが存在しません</h2>
+        {% if request.user.is_superuser %}
+        <hr class="my-4">
+        <form action="{% url 'info_dispatch' work_date=work_date %}" method="post">
+            {% csrf_token %}
             <div class="mt-1">
                 <p>利用者・スタッフの曜日別の<br>登録データを元に勤務データを作成する<br>(通常はこちら)</p>
                 <button class="btn-sm" id="id_create_records" type="submit" name="create_records" value="0">
@@ -92,13 +97,14 @@
                     実行
                 </button>
             </div>
-            <hr class="my-4">
+        </form>
 
-            {% endif %}
-        </div>
+        <hr class="my-4">
 
         {% endif %}
-    </form>
+    </div>
+
+    {% endif %}
 
     {% if info %}
     <div class="tab-content" id="infoTabContent">
