--- a/app/templates/app/template_header.html
+++ b/app/templates/app/template_header.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-md fixed-top" style="background-color: #329721;">
     <div class="container">
-      <a href="{% url 'info_today' %}" class="navbar-brand" style="color: white;">SEVENTH FACTORY</a>
+      <a href="{% url 'info' %}" class="navbar-brand" style="color: white;">SEVENTH FACTORY</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
         aria-controls="navbar" aria-expanded="false" aria-label="ナビゲーションの切替">
         <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link nav-link-custom" href="{% url 'info_today' %}">ホーム</a>
+            <a class="nav-link nav-link-custom" href="{% url 'info' %}">ホーム</a>
           </li>
           {% if request.user.is_superuser %}
           <li class="nav-item">
