--- a/app/templates/app/template_base.html
+++ b/app/templates/app/template_base.html
@@ -10,6 +10,12 @@
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="apple-touch-icon" href="{% static 'images/favicon.ico' %}">
+
+    <title>セブンスファクトリー</title>
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="セブンスファクトリー">
    
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
