--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -53,6 +53,13 @@
         });
     });
 
+    document.addEventListener('click', function (e) {
+        const btn = e.target.closest('.js-move');
+        if (!btn) return;
+
+        location.href = btn.dataset.url;
+    });
+
 </script>
 
 <div class="wrapper">
@@ -66,6 +73,27 @@
             </button>
         </form>
     </div>
+
+    <div class="table-responsive-md mt-2">
+        <table class="table table-bordered">
+            <tbody>
+                <tr class="table-success">
+                    <td class="d-flex justify-content-between align-items-start">
+                        <div>
+                            {{notice_form.instance.notice | linebreaksbr }}
+                        </div>
+                        <button type="button"
+                            class="btn-sm scroll-save"
+                            data-bs-toggle="modal"
+                            data-bs-target="#noticeModal">
+                            編集
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
     {% if info %}
     <ul class="nav nav-tabs mt-2" id="tab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -138,7 +166,7 @@
                                     [作業内容など]
                                     {{ place_info.remarks | linebreaksbr }}
                                 </div>
-                                <button type="button" onclick='location.href="{% url "place_remarks_edit" place_info.place_id work_date %}"'>
+                                <button type="button" class="js-move" data-url="{% url 'place_remarks_edit' place_info.place_id work_date %}">
                                     編集
                                 </button>
                             </div>
@@ -202,6 +230,7 @@
             {% endfor %}
         {% endfor %}
     {% endif %}
+    {% include "app/partials/notice_modal.html" %}
 </div>
 
 {% endblock %}
