--- a/app/templates/app/template_base.html
+++ b/app/templates/app/template_base.html
@@ -26,7 +26,7 @@
 
   <script src="{% static 'js/main.js' %}"></script>
 
-  <body style="margin-top: 80px;">
+  <body style="margin-top: 80px; margin-bottom: 80px">
 
     <div class="container">
       {% block header %}
